# math-genealogy-scraper

./: README.md  convert_script.py  fetch.py  parse.py  pyproject.toml
output/: data.json  metadata_20251024_145025.json  metadata_20251024_145142.json
